--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,21 +1,22 @@
 <div class="row">
   <table class="table table-striped">
     <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
-    <tr> <td>09:00</td>  <td>Python Fundamentals</td> </tr>
-    <tr> <td>09:30</td>  <td>Analyzing Patient Data</td> </tr>
-    <tr> <td>10:00</td>  <td>Visualizing Tabular Data</td> </tr>
-    <tr> <td>10:30</td>  <td>Break</td> </tr>
+    <tr> <td>09:00</td>  <td>Introduction</td> </tr>
+    <tr> <td>09:15</td>  <td>Python Fundamentals</td> </tr>
+    <tr> <td>09:45</td>  <td>Analyzing Radiance Data</td> </tr>
+    <tr> <td>10:30</td>  <td>*** BREAK ***</td> </tr>
     <tr> <td>10:45</td>  <td>Repeating Actions With Loops</td> </tr>
-    <tr> <td>11:30</td>  <td>Storing Multiple Values in Lists</td> </tr>
-    <tr> <td>12:00</td>  <td>Analyzing Data From Multiple Files</td> </tr>
-    <tr> <td>12:30</td>  <td>Lunch</td> </tr>
-    <tr> <td>13:30</td>  <td>Making Choices</td> </tr>
+    <tr> <td>11:15</td>  <td>Storing Multiple Values in Lists</td> </tr>
+    <tr> <td>12:00</td>  <td>*** LUNCH ***</td> </tr>
+    <tr> <td>13:00</td>  <td>Making Choices (if statements)</td> </tr>
+    <tr> <td>13:30</td>  <td>Analyzing multiple files</td> </tr>
     <tr> <td>14:00</td>  <td>Creating Functions</td> </tr>
-    <tr> <td>14:30</td>  <td>Errors & Exceptions</td> </tr>
-    <tr> <td>15:00</td>  <td>Break</td> </tr>
-    <tr> <td>15:15</td>  <td>Defensive Programming</td> </tr>
-    <tr> <td>16:00</td>  <td>Debugging</td> </tr>
+    <tr> <td>14:45</td>  <td>*** BREAK ***</td> </tr>
+    <tr> <td>15:00</td>  <td>Defensive Programming</td> </tr>
+    <tr> <td>15:30</td>  <td>Debugging</td> </tr>
     <tr> <td>16:00</td>  <td>Command-Line Programs</td> </tr>
+    <tr> <td>16:45</td>  <td>Final Questions and Debrief</td> </tr>
     <tr> <td>17:00</td>  <td>END</td> </tr>
+    <tr> <td>After</td> <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop survey</a></td></tr>
   </table>
 </div>
